2023-10-18_docker_tieto/kubernetes-counter-example/redis-sts.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
spec:
  serviceName: redis
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: main
          image: redis
          ports:
            - containerPort: 6379
          resources:
            requests:
              cpu: 40m
              memory: 20Mi
            limits:
              cpu: 80m
              memory: 40Mi
