2023-10-18_docker_tieto/kubernetes-counter-example/counter-service.yml
apiVersion: v1
kind: Service
metadata:
  name: counter
spec:
  selector:
    app: counter
  ports:
    - port: 80
