2023-10-18_docker_tieto/kubernetes-counter-example/ingress-minikube.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: counter-minikube
spec:
  ingressClassName: nginx
  rules:
    - host: counter.127.0.0.1.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: counter
                port:
                  number: 80
