2023-10-18_docker_tieto/kubernetes-counter-example/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: counter
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - counter.k8s.sikademo.com
      secretName: counter-tls
  rules:
    - host: counter.k8s.sikademo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: counter
                port:
                  number: 80
